- Removed clone method from OrderedSetValue and SequenceValue. They don't implement Clonable and the method is not called in USE
git-svn-id: https://db-svn.informatik.uni-bremen.de/repos/stuff/use/trunk@2257 e95982d2-0d12-e879-a455-8ce5a0885042